<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="error_message">An error has occurred. Be sure you have a valid API_KEY.</string>
    <string name="movie_img_content_description">Movie image</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_favorite">Favorite</string>
    <string name="tv_description_label">Description</string>
    <string name="tv_release_date_label">Release Date</string>
    <string name="tv_rating_label">Rating</string>
    <string name="tv_reviews_label">Reviews</string>
    <string name="tv_trailer_label">Trailer</string>
    <string name="bt_trailer_content_description">Trailer Button</string>



</resources>
