<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_main_label_margin_top"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="368dp"
            android:layout_height="174dp"
            android:layout_marginTop="@dimen/activity_main_label_margin_top"
            android:contentDescription="@string/movie_img_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_value"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_main_label_margin_top"
            android:layout_marginStart="@dimen/activity_main_label_margin_top"
            android:layout_marginTop="8dp"
            android:text="@string/tv_description_label"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_play_trailer" />

        <TextView
            android:id="@+id/tv_description_value"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="@dimen/activity_main_value_margin_top"
            android:layout_marginRight="8dp"
            android:layout_marginStart="@dimen/activity_main_value_margin_top"
            android:layout_marginTop="@dimen/activity_main_value_margin_top"
            android:textColor="@color/secondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_description_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_label"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies lobortis auctor. Maecenas faucibus elit a enim sodales, quis mollis nunc pellentesque." />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_main_label_margin_top"
            android:text="@string/tv_release_date_label"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_description_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_value" />

        <TextView
            android:id="@+id/tv_release_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/activity_main_value_margin_top"
            android:textColor="@color/secondaryText"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label"
            tools:text="2014-2-1" />

        <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_main_label_margin_top"
            android:text="@string/tv_rating_label"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_value" />

        <RatingBar
            android:id="@+id/rb_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_main_value_margin_top"
            android:layout_marginStart="@dimen/activity_main_value_margin_top"
            android:layout_marginTop="@dimen/activity_main_value_margin_top"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="@+id/tv_rating_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_label" />

        <TextView
            android:id="@+id/tv_trailer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/tv_trailer_label"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/bt_play_trailer"
            app:layout_constraintStart_toEndOf="@+id/bt_play_trailer"
            app:layout_constraintTop_toTopOf="@+id/bt_play_trailer" />

        <ImageButton
            android:id="@+id/bt_play_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryLight"
            android:contentDescription="@string/bt_trailer_content_description"
            app:layout_constraintStart_toStartOf="@+id/tv_description_label"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            app:srcCompat="@drawable/ic_play_circle_filled_black_24px" />

        <CheckedTextView
            android:id="@+id/ctv_isFavorite"
            android:layout_width="36dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:checkMark="@drawable/ic_heart_outline"
            android:checked="false"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_trailer"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>